--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@tiptap/starter-kit": "^3.6.7",
     "gray-matter": "^4.0.3",
     "lucide-react": "0.546.0",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
