--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tiptap/pm": "^3.6.7",
     "@tiptap/react": "^3.6.7",
     "@tiptap/starter-kit": "^3.6.7",
+    "@vercel/analytics": "^1.6.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "0.546.0",
     "next": "^16.1.1",
