--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@vercel/speed-insights": "^1.3.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "0.546.0",
+    "mongodb": "^6",
     "next": "^16.1.1",
+    "nodemailer": "^6.10.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "rehype-raw": "^7.0.0",
